# code_executor_py

./: .gitignore  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  test_remote.py  test_script.py
src/code_executor/: venv_executor.py
src/code_executor_py/: __init__.py  remote_executor.py  venv_executor.py
tests/: test_remote.py  test_venv.py
