[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code_executor"
version = "0.1.0"
authors = [
  { name="Sawradip Saha", email="sawradip0@gmail.com" },
]
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # List your dependencies here
]

[project.urls]
"Homepage" = "https://github.com/username/your-package-name"
"Bug Tracker" = "https://github.com/username/your-package-name/issues"