[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-executor-py"
version = "0.0.1"
authors = [
  { name = "Sawradip Saha", email = "sawradip0@gmail.com" },
]

description = "A module for dynamically (llm)generated code execution locally, in separate venv or even separate sandbox container."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Start of Selection
dependencies = ["langchain_core>=0.3"]
# End of Selection

[project.urls]
homepage = "https://github.com/sawradip/code-executor"
bug_tracker = "https://github.com/sawradip/code-executor/issues"