[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-executor-py"
version = "0.3.0"
authors = [
  { name = "Sawradip Saha", email = "sawradip0@gmail.com" },
]

description = "A module for python code execution locally, in separate venv or even separate sandbox container."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Start of Selection
dependencies = [
  "langchain_core>=0.3",
  "pydantic>=2.0.0",
  "fastapi>=0.115.12",
  "uvicorn>=0.34.2",
  "pandas>=2.0.0"
]
# End of Selection

[tool.hatch.build]
exclude = [
  "venv",
  ".venv",
  "*.pyc",
  "__pycache__",
  "dist",
  "build",
  ".env",
  ".git"
]

[project.urls]
homepage = "https://github.com/sawradip/code_executor_py"
bug_tracker = "https://github.com/sawradip/code_executor_py/issues"